# pysjo

./: README.md  environment.yml  pyproject.toml
docs/: conf.py  index.rst  installation.rst  notebooks.rst
src/pyops/: __init__.py  _addons.py  convert.py  io.py  java.py
src/pysjo/: __init__.py  _addons.py  _endpoints.py  _gateway.py  convert.py  io.py  java.py
