[build-system]
requires = [ "setuptools>=61.2" ]
build-backend = "setuptools.build_meta"

[project]
name = "pyops"
version = "0.0.1.dev0"
description = "Python wrapper for the SciJava Ops framework"
license = {text = "Apache-2.0"}
authors = [{name= "Edward Evans", email="elevans2@wisc.edu"}]
readme = "README.md"
keywords = ["java", "scijava", "imglib2"]
requires-python = ">=3.8"
dependencies = [
	"scyjava >= 1.9.1",
	"imglyb >= 2.1.0",
]

[tool.setuptools]
platforms = ["any"]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
